# Compressao-de-Imagens

./: .gitignore  CMakeLists.txt  Leiame.txt  Makefile  a.out  biblia.7z  biblia_encoded.txt  check_files.sh  main.cpp  teste.txt  teste_encoded.txt
Hufmann/: main.cpp  (+3 more)
PPM/: CMakeLists.txt  Makefile  Makefile.ac  a.out  adaptive_model.c  adaptive_model.h  arithmetic_coding.h  arithmetic_decode.c  arithmetic_decode.h  arithmetic_encode.c  arithmetic_encode.h  biblia.7z  biblia_decoded.txt  biblia_encoded.txt  biblia_facil.txt  biblia_facil2.txt  biblia_facil2_encoded.txt  bit_input.c  bit_input.h  bit_output.c  bit_output.h  decode.c  decode.out  desempenho.m  encode.c  fixed_model.c  gabarito  model.h  ppm.c  ppm.h
PPM/Envio/: Makefile  arithmetic_coding.h  arithmetic_decode.h  arithmetic_encode.c  decode.c  encode.c  ppm.h  readme.txt
PPM/ReferenciaAlternativa/: ArithmeticCoder.cpp  ArithmeticCoder.hpp  BitIoStream.cpp  BitIoStream.hpp  FrequencyTable.cpp  FrequencyTable.hpp  Ppm.cpp  Ppm.hpp  PpmDecode.cpp  PpmEncode.cpp
Wavelets/: Analisys.ipynb  CMakeLists.txt  Decode.bat  Encode.bat  EncoderWrapper.cpp  EncoderWrapper.h  Evaluate.bat  ImageReader.cpp  ImageReader.h  PSNR.ipynb  Plot.ipynb  PlotCodebooks.ipynb  PlotFinal.ipynb  Plots.ipynb  TreinoAll.bat  VQ.cpp  VQ.h  WaveletHelper.cpp  WaveletHelper.h  aaaa.csv  ap_final.pptx  arithmetic_coding.h  arithmetic_decode.c  arithmetic_decode.h  arithmetic_encode.c  arithmetic_encode.h  bbbb.csv  bit_input.c  bit_input.h  bit_output.c  cb_list.cpp  cb_list.h  codebooks_0.txt  codebooks_1.txt  codebooks_2.txt  codebooks_3.txt  codebooks_4.txt  codebooks_5.txt  codebooks_6.txt  codebooks_7.txt  (+39 more)
Wavelets/.ipynb_checkpoints/: Analisys-checkpoint.ipynb  PlotFinal-checkpoint.ipynb  Plots-checkpoint.ipynb  aaaa-checkpoint.csv  bbbb-checkpoint.csv
Wavelets/codebooks/: codebooks_0.txt  codebooks_1.txt  codebooks_2.txt  codebooks_3.txt  codebooks_4.txt  codebooks_5.txt  codebooks_6.txt  codebooks_7.txt  codebooks_8.txt  codebooks_9.txt
Wavelets/desempenhos/: BestCDBK_30.csv  performance_0_30.csv  performance_1_30.csv  performance_2_30.csv  performance_3_30.csv  performance_4_30.csv  performance_5_30.csv  performance_6_30.csv  performance_7_30.csv  performance_8_30.csv  performance_9_30.csv
Wavelets/imagens_vq/dec/: barb.pgm_decoded.pgm  barb.pgm_decoded.pgmwav.pgm  barb.pgm_decoded_0.100000.pgm  barb.pgm_decoded_1.000000.pgm  barb.pgm_decoded_10.000000.pgm  barb.pgm_decoded_100.000000.pgm  barb.pgm_decoded_100.pgm  barb.pgm_decoded_2.500000.pgm  barb.pgm_decoded_200.000000.pgm  barb.pgm_decoded_25.000000.pgm  barb.pgm_decoded_5.000000.pgm  cameraman.pgm_decoded_1.000000.pgm  (+40 more)
Wavelets/performances/: performances.txt  performances_bkp.txt  performances_bkp2.txt  performances_bkp4.txt
(+103 files in other folders)
